--- a/src/app/features/cart-management/checkout/payment/payment.component.html
+++ b/src/app/features/cart-management/checkout/payment/payment.component.html
@@ -271,7 +271,10 @@
             <table class="table-full-width" cellspacing="0">
               <tr>
                 <td>
-                  <mat-form-field appearance="outline" (click)="toggleFlip(false)">
+                  <mat-form-field
+                    appearance="outline"
+                    (click)="toggleFlip(false)"
+                  >
                     <mat-label>Name</mat-label>
                     <input
                       matInput
@@ -292,7 +295,10 @@
             <table class="table-full-width" cellspacing="0">
               <tr>
                 <td>
-                  <mat-form-field appearance="outline" (click)="toggleFlip(false)">
+                  <mat-form-field
+                    appearance="outline"
+                    (click)="toggleFlip(false)"
+                  >
                     <mat-label>Card Number</mat-label>
                     <input
                       matInput
