--- a/src/app/shared/navbar/navbar.component.scss
+++ b/src/app/shared/navbar/navbar.component.scss
@@ -1,5 +1,8 @@
 @import '../../../assets/css/variable.scss';
 
+.mat-select-panel-wrap {
+  margin: 39px 0px 0px -30px;
+}
 .nav-bar {
   z-index: 1000;
   top: 0;
