--- a/src/app/features/admin-management/product-components/delete-product/delete-product.component.html
+++ b/src/app/features/admin-management/product-components/delete-product/delete-product.component.html
@@ -1,1 +1,17 @@
 <app-jumbotron [Heading]="'DELETE-PRODUCT'"></app-jumbotron>
+<div class="delete-container">
+  <div class="delete-input">
+    <app-big-input [placeholder]="'Enter The Number'" (keyup)="onInputChanged($event.target.value)">
+      <app-big-input-action
+        [color]="'warn'"
+        [iconname]="'delete_outline'"
+        (action)="onProductDelete()"
+        [disabled]="isDisabled"
+        [matTooltip]="'app.examples.todos.tooltip.remove' | translate"
+        matTooltipPosition="after"
+      >
+      </app-big-input-action>
+    </app-big-input>
+  </div>
+</div>
+<app-footer></app-footer>
