--- a/src/app/features/user-management/profile/view-profile/view-profile.component.scss
+++ b/src/app/features/user-management/profile/view-profile/view-profile.component.scss
@@ -13,6 +13,7 @@
       -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
       box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      transform: translateY(-2px);
     }
     .mat-form-field {
       width: 100%;
@@ -43,6 +44,7 @@
       -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
       box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
         0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      transform: translateY(-2px);
     }
   }
 
