fix: 🐛 buy-list half ui completed

--- a/src/app/features/user-management/profile/profile.component.html
+++ b/src/app/features/user-management/profile/profile.component.html
@@ -10,5 +10,6 @@
   </mat-tab>
   <mat-tab label="To Buy List">
     <div class="profile-container"></div>
+    <app-buy-list></app-buy-list>
   </mat-tab>
 </mat-tab-group>
