--- a/src/app/shared/big-input/big-input/big-input.component.html
+++ b/src/app/shared/big-input/big-input/big-input.component.html
@@ -1,6 +1,6 @@
 <mat-card
   class="big-input"
-  [ngStyle]="{'min-height': height + 'px'}"
+  [ngStyle]="{'min-height': height + 'px' ,'border-radius' : radius + 'px'}"
   [ngClass]="{ 'has-focus': hasFocus }"
 >
   <input
