--- a/src/app/shared/big-input/big-input/big-input.component.scss
+++ b/src/app/shared/big-input/big-input/big-input.component.scss
@@ -3,8 +3,9 @@
   transition: all 0.5s;
   display: flex;
   padding: 10px 10px 10px 20px;
-  border-radius: 10px;
-  box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+  // box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 2px 1px -1px rgba(0, 0, 0, 0.3), 0 1px 1px 0 rgba(0, 0, 0, 0.24),
+    0 1px 3px 0 rgba(0, 0, 0, 0.22);
   &:hover {
     box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.24),
       0 3px 14px 2px rgba(0, 0, 0, 0.22);
