--- a/src/app/shared/footer/footer.component.html
+++ b/src/app/shared/footer/footer.component.html
@@ -6,6 +6,6 @@
       <mat-icon>favorite</mat-icon>
       &nbsp;&nbsp;<span>by Kaushal Shah</span>
     </span>
-    <!-- <span>1.0.0</span> -->
+    <span>1.0.0</span>
   </mat-toolbar-row>
 </mat-toolbar>
