--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,1 +1,4 @@
 <router-outlet></router-outlet>
+<button mat-fab color="warn" *ngIf="isShow" class="c-go-to-top" (click)="gotoTop()">
+  <mat-icon>arrow_upward</mat-icon>
+</button>
