--- a/src/app/features/user-management/view-orders/view-orders.component.scss
+++ b/src/app/features/user-management/view-orders/view-orders.component.scss
@@ -1,53 +1,55 @@
 .order-container {
   padding: 50px 50px 38px 50px;
   min-height: 550px;
-  .roww {
-    display: flex;
-    flex-wrap: wrap;
-    margin-right: -15px;
-    margin-left: -15px;
-    .order-card {
-      border-radius: 10px;
-      box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
-      height: 115px;
-      width: 100%;
+
+  .mat-expansion-panel {
+    border-radius: 10px !important;
+    &:hover {
+      box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.1), 0 8px 10px 1px rgba(0, 0, 0, 0.14),
+        0 3px 14px 2px rgba(0, 0, 0, 0.12);
+      transform: translateY(0.5px);
+      background-color: white !important;
+    }
+    .mat-expansion-panel-header {
+      height: 80px !important;
       &:hover {
-        -webkit-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.75);
-        -moz-box-shadow: 0px 4px 14px 0px rgba(0, 0, 0, 0.1);
-        // box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2),
-        //   0 8px 10px 1px rgba(0, 0, 0, 0.14), 0 3px 14px 2px rgba(0, 0, 0, 0.12);
-        box-shadow: 0 5px 5px -3px rgba(0, 0, 0, 0.2), 0 8px 10px 1px rgba(0, 0, 0, 0.24),
-          0 3px 14px 2px rgba(0, 0, 0, 0.22);
-        transform: translateY(-0.5px);
+        background: rgba(0, 0, 0, 0.01);
       }
-      .order-header {
-        padding-left: 100px;
-        p {
-          margin-bottom: 0.6rem !important;
-        }
-        .order-image {
-          height: 70px;
-          width: 70px;
-          border-radius: 50%;
-          flex-shrink: 0;
-          position: absolute;
-          left: 20px;
-          object-fit: cover;
-        }
+      .user-image {
+        height: 40px;
+        width: 40px;
+        border-radius: 50%;
+        position: relative;
+        left: 5%;
+        object-fit: cover;
       }
-      .cancel-button {
-        position: absolute;
-        top: 30px;
-        left: 70%;
-        .mat-raised-button {
-          height: 50px;
-          .cancel-icon {
-            font-size: 30px;
-            margin-top: -5px;
-            margin-left: -5px;
-          }
+      p {
+        position: relative;
+        top: 17%;
+        left: -37%;
+      }
+    }
+    .mat-table {
+      width: 100%;
+      th.mat-header-cell:last-of-type {
+        padding-right: 0px;
+      }
+      .mat-row {
+        &:hover {
+          background: whitesmoke;
+        }
+        .product-image {
+          width: 30px;
+          height: 30px;
         }
       }
+      .cancel-btn {
+        position: relative;
+        left: -55px;
+      }
+    }
+    .mat-card {
+      box-shadow: none;
     }
   }
 }
