update product added

--- a/src/app/features/admin-management/product-components/view-products/view-products.component.html
+++ b/src/app/features/admin-management/product-components/view-products/view-products.component.html
@@ -78,11 +78,11 @@
                   <mat-icon>remove_red_eye</mat-icon>
                 </button>
                 &nbsp;&nbsp;
-                <button mat-icon-button color="accent" (click)="updateCart(qty.value, cartitem)">
+                <button mat-icon-button color="accent" (click)="updateProduct(element)">
                   <mat-icon>edit</mat-icon>
                 </button>
                 &nbsp;&nbsp;
-                <button mat-icon-button color="warn" (click)="removeFromCart(cartitem)">
+                <button mat-icon-button color="warn" (click)="removeProduct(element)">
                   <mat-icon>delete</mat-icon>
                 </button>
               </td>
